--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,7 +120,7 @@ commands:
       - run:
           name: aws ecr set-repository-policy
           command: |
-            git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/policy\.json$" || exit 0
+            # git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/policy\.json$" || exit 0
             aws --profile prod_circleci ecr set-repository-policy \
               --repository-name << parameters.REPO_URI >> \
               --policy-text file://.circleci/policy.json \
@@ -129,7 +129,7 @@ commands:
       - run:
           name: aws ecr put-lifecycle-policy
           command: |
-            git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/ecr_repo_lifecycle_policy\.json$" || exit 0
+            # git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/ecr_repo_lifecycle_policy\.json$" || exit 0
             aws --profile prod_circleci ecr put-lifecycle-policy \
               --repository-name << parameters.REPO_URI >> \
               --lifecycle-policy-text file://.circleci/ecr_repo_lifecycle_policy.json \
