--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "aws-lambda-powertools[parser,tracer,validation]>=3.12.0",
+    "aws-lambda-powertools[parser,tracer,validation]==3.14.0",
 ]
 
 [tool.ruff]
