--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ commands:
           repo: << parameters.REPO_URI >>
           tag: ${IMAGE_TAG}
           no_output_timeout: 10m
-          #! Using `--output force-compression=true` requires additional time to re-compress layers imported from a previous image, which can take up to 1 minute longer. However, it can reduce the image size, for example, from 1GB to 880MB.
+          # Lambda does not support compressed images or OCI format; must use "--provenance=false"
           extra_build_args: >-
             --provenance=false
             --cache-from type=registry,ref=972446755199.dkr.ecr.eu-west-1.amazonaws.com/<< parameters.REPO_URI >>:<< parameters.CACHE_IMAGE_NAME >>
@@ -70,61 +70,61 @@ commands:
 
       # todo START: move repo creation, permission policy update and lifecycle policy update to infra, it requires "admin" permission to target ECR repo
       # The repo creation in infra-aws is not fliexible enough to customize policy and lifecycle policy at this moment.
-      # - run:
-      #     name: Halt if no changes on repo policy files
-      #     command: |
-      #       set -x
-      #       git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/(ecr_repo_lifecycle_)?policy\.json$" || IS_CHANGED="no"
-      #       if [ "$IS_CHANGED" != "no" ]; then
-      #         echo "policy files have been changed since diverged from main, continue the job."
-      #       else
-      #         echo "policy files have not been changed since diverged from main, halt the job."
-      #         circleci-agent step halt
-      #       fi
+      - run:
+          name: Halt if no changes on repo policy files
+          command: |
+            set -x
+            git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/(ecr_repo_lifecycle_)?policy\.json$" || IS_CHANGED="no"
+            if [ "$IS_CHANGED" != "no" ]; then
+              echo "policy files have been changed since diverged from main, continue the job."
+            else
+              echo "policy files have not been changed since diverged from main, halt the job."
+              circleci-agent step halt
+            fi
 
-      # - aws-cli/setup:
-      #     profile_name: "tb_openid"
-      #     role_arn: arn:aws:iam::332061674893:role/openid
-      #     role_session_name: "devsecops-infra"
-      #     session_duration: "2400"
-      #     set_aws_env_vars: false
-      #     region: "eu-west-1"
+      - aws-cli/setup:
+          profile_name: "tb_openid"
+          role_arn: arn:aws:iam::332061674893:role/openid
+          role_session_name: "devsecops-infra"
+          session_duration: "2400"
+          set_aws_env_vars: false
+          region: "eu-west-1"
 
-      # - aws-cli/role_arn_setup:
-      #     profile_name: "prod_circleci"
-      #     role_arn: arn:aws:iam::972446755199:role/circleci
-      #     source_profile: "tb_openid"
+      - aws-cli/role_arn_setup:
+          profile_name: "prod_circleci"
+          role_arn: arn:aws:iam::972446755199:role/circleci
+          source_profile: "tb_openid"
 
-      # - run:
-      #     name: aws ecr create-repository
-      #     command: |
-      #       # Create the repository if it does not exist
-      #       aws --profile prod_circleci ecr describe-repositories \
-      #         --repository-names << parameters.REPO_URI >> \
-      #         --region eu-west-1 || \
-      #       aws --profile prod_circleci ecr create-repository \
-      #         --repository-name << parameters.REPO_URI >> \
-      #         --image-scanning-configuration scanOnPush=true \
-      #         --region eu-west-1
+      - run:
+          name: aws ecr create-repository
+          command: |
+            # Create the repository if it does not exist
+            aws --profile prod_circleci ecr describe-repositories \
+              --repository-names << parameters.REPO_URI >> \
+              --region eu-west-1 || \
+            aws --profile prod_circleci ecr create-repository \
+              --repository-name << parameters.REPO_URI >> \
+              --image-scanning-configuration scanOnPush=true \
+              --region eu-west-1
 
-      # - run:
-      #     name: aws ecr set-repository-policy
-      #     command: |
-      #       # git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/policy\.json$" || exit 0
-      #       aws --profile prod_circleci ecr set-repository-policy \
-      #         --repository-name << parameters.REPO_URI >> \
-      #         --policy-text file://.circleci/policy.json \
-      #         --region eu-west-1
+      - run:
+          name: aws ecr set-repository-policy
+          command: |
+            git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/policy\.json$" || exit 0
+            aws --profile prod_circleci ecr set-repository-policy \
+              --repository-name << parameters.REPO_URI >> \
+              --policy-text file://.circleci/policy.json \
+              --region eu-west-1
 
-      # - run:
-      #     name: aws ecr put-lifecycle-policy
-      #     command: |
-      #       git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/ecr_repo_lifecycle_policy\.json$" || exit 0
-      #       aws --profile prod_circleci ecr put-lifecycle-policy \
-      #         --repository-name << parameters.REPO_URI >> \
-      #         --lifecycle-policy-text file://.circleci/ecr_repo_lifecycle_policy.json \
-      #         --region eu-west-1
-      # # todo END: move repo creation, permission policy update and lifecycle policy update to infra, it requires "admin" permission to target ECR repo
+      - run:
+          name: aws ecr put-lifecycle-policy
+          command: |
+            git diff main...HEAD --no-commit-id --name-only | grep --perl-regexp "^\.circleci/ecr_repo_lifecycle_policy\.json$" || exit 0
+            aws --profile prod_circleci ecr put-lifecycle-policy \
+              --repository-name << parameters.REPO_URI >> \
+              --lifecycle-policy-text file://.circleci/ecr_repo_lifecycle_policy.json \
+              --region eu-west-1
+      # todo END: move repo creation, permission policy update and lifecycle policy update to infra, it requires "admin" permission to target ECR repo
 
 defaults: &defaults
   machine:
