rewrite in rust lambda_sns_to_slack
Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ commands:
       - run:
           name: extract app name and version
           command: |
-            APP_VERSION=$(yq -e '.project.version' pyproject.toml)
+            APP_VERSION=$(yq -e '.package.version' lambda_sns_to_slack/Cargo.toml)
             if [[ "${CIRCLE_BRANCH}" =~ ^main$ ]]; then
               IMAGE_TAG="v${APP_VERSION},${APP_VERSION},latest"
             else
@@ -138,7 +138,8 @@ jobs:
     steps:
       - build_image_with_cache_from_registry:
           REPO_URI: "devsecops-cloudwatch-alarms"
-          DOCKERFILE: "Dockerfile"
+          DOCKERFILE: "lambda_sns_to_slack/Dockerfile"
+          CACHE_IMAGE_NAME: "lambda_sns_to_slack_cache"
 
 workflows:
   image_build:
