--- a/lambda_sns_to_slack/Dockerfile
+++ b/lambda_sns_to_slack/Dockerfile
@@ -1,10 +1,13 @@
 FROM rust:1.87-alpine AS builder
 
-RUN apk add --no-cache libssl-static musl-dev openssl-dev pkgconfig
+RUN apk add --no-cache musl-dev openssl-dev pkgconfig
 
 WORKDIR /code
 COPY Cargo.toml Cargo.lock ./
 COPY src ./src
+
+ENV OPENSSL_STATIC=1
+ENV OPENSSL_DIR="/usr"
 RUN cargo build --release --target x86_64-unknown-linux-musl
 
 FROM public.ecr.aws/lambda/provided:al2023
