--- a/lambda_sns_to_slack/Dockerfile
+++ b/lambda_sns_to_slack/Dockerfile
@@ -3,7 +3,7 @@
 FROM --platform=$BUILDPLATFORM rust:alpine AS chef
 WORKDIR /app
 ENV PKGCONFIG_SYSROOTDIR=/
-RUN apk add --no-cache musl-dev openssl-dev zig
+RUN apk add --no-cache musl-dev openssl-dev openssl-libs-static zig
 RUN cargo install --locked cargo-zigbuild cargo-chef
 RUN rustup target add x86_64-unknown-linux-musl aarch64-unknown-linux-musl
 
