--- a/lambda_sns_to_slack/Dockerfile
+++ b/lambda_sns_to_slack/Dockerfile
@@ -4,11 +4,9 @@ WORKDIR /app
 COPY Cargo.toml Cargo.lock ./
 COPY src ./src
 
-ENV OPENSSL_STATIC=1
-ENV OPENSSL_DIR="/usr/local/musl"
-
-RUN cargo build --release
+RUN cargo build --release && \
+    musl-strip target/x86_64-unknown-linux-musl/release/lambda_sns_to_slack
 
 FROM public.ecr.aws/lambda/provided:al2023
-COPY --from=builder /app/target/release/lambda_sns_to_slack /var/task/bootstrap
+COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/lambda_sns_to_slack /var/task/bootstrap
 CMD ["bootstrap"]
