--- a/lambda_sns_to_slack/Cargo.toml
+++ b/lambda_sns_to_slack/Cargo.toml
@@ -11,7 +11,10 @@ aws_lambda_events = { version = "0.16.1", default-features = false, features = [
 lambda_runtime = "0.14.2"
 once_cell = "1.21.3"
 regex = "1.11.1"
-reqwest = { version = "0.12.20", features = ["json"] }
+reqwest = { version = "0.12.20", features = [
+    "json",
+    "rustls-tls",
+], default-features = false }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1", features = ["macros"] }
