use /var/runtime/bootstrap
Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

--- a/lambda_sns_to_slack/Dockerfile
+++ b/lambda_sns_to_slack/Dockerfile
@@ -8,5 +8,5 @@ RUN cargo build --release && \
     musl-strip target/x86_64-unknown-linux-musl/release/lambda_sns_to_slack
 
 FROM public.ecr.aws/lambda/provided:al2023
-COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/lambda_sns_to_slack /var/task/bootstrap
+COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/lambda_sns_to_slack /var/runtime/bootstrap
 CMD ["bootstrap"]
