Add zip_build workflow
Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,6 +147,7 @@ commands:
           command: |
             curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
             cargo binstall cargo-lambda
+            cargo lambda system --install-zig
 
       - run:
           name: cargo lambda build
