--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,7 @@ commands:
           command: |
             curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
             cargo binstall cargo-lambda
-            cargo lambda system --install-zig
+            cargo install --locked cargo-zigbuild
 
       - run:
           name: cargo lambda build
