Add zip_build workflow
Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,6 +157,7 @@ commands:
             ZIG_VERSION=$(DO_CURL https://api.github.com/repos/ziglang/zig/releases/latest | jq -r '.tag_name')
 
             ZIG_URL=$(DO_CURL https://ziglang.org/download/index.json | jq -r ".\"$ZIG_VERSION\".\"$OS_ARCH\"-linux.tarball")
+            echo "Zig URL: ${ZIG_URL}"
             DO_CURL "${ZIG_URL}" | tar -xvzf - --strip-components=1 -C ~/.local/bin/
 
       - run:
