Add zip_build workflow
Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,15 +154,15 @@ commands:
             set -x
 
             DO_CURL() { curl --retry 10 -L --proto '=https' --tlsv1.2 -sSf "$@" }
-            ZIG_VERSION=$(DO_CURL https://api.github.com/repos/ziglang/zig/releases/latest | jq -r '.tag_name')
+            ZIG_VER=$(DO_CURL https://api.github.com/repos/ziglang/zig/releases/latest | jq -r '.tag_name')
 
-            grep "ZIG_VERSION=${ZIG_VERSION}" CACHED_VERSIONS.txt && exit 0 || echo "Installing new version: ${ZIG_VERSION}"
+            grep "ZIG_VER=${ZIG_VER}" CACHED_VERSIONS.txt && exit 0 || echo "Installing new version: ${ZIG_VER}"
 
             OS_ARCH=$(uname -m)
-            ZIG_URL="https://ziglang.org/download/${ZIG_VERSION}/zig-${OS_ARCH}-linux-${ZIG_VERSION}.tar.xz"
+            ZIG_URL="https://ziglang.org/download/${ZIG_VER}/zig-${OS_ARCH}-linux-${ZIG_VER}.tar.xz"
 
             mkdir -p ~/.local/bin/
-            DO_CURL "${ZIG_URL}" | tar -xvzf - --strip-components=1 -C ~/.local/bin/
+            DO_CURL "${ZIG_URL}" | tar -xvJf - --strip-components=1 -C ~/.local/bin/
 
       - run:
           name: cargo lambda build
@@ -230,7 +230,7 @@ commands:
             UPX_VER=$(~/.local/bin/upx --version)
             CARGO_BINSTALL_VER=$(cargo binstall -V)
             CARGO_LAMBDA_VER=$(cargo lambda -V)
-            ZIG_VERSION=$(zig version)
+            ZIG_VER=$(zig version)
             EOF
 
             cat CACHED_VERSIONS.txt
