--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,7 +182,7 @@ commands:
 
             OS_ARCH=$(uname -m | sed -e 's/aarch/arm/' -e 's/x86_/amd/')
             UPX_VERSION=$(DO_CURL https://api.github.com/repos/upx/upx/releases/latest | jq -r '.tag_name')
-            UPX_URL="https://github.com/upx/upx/releases/download/${UPX_VERSION}/upx-${UPX_VERSION}-${OS_ARCH}_linux.tar.xz"
+            UPX_URL="https://github.com/upx/upx/releases/download/${UPX_VERSION}/upx-${UPX_VERSION#v}-${OS_ARCH}_linux.tar.xz"
 
             DO_CURL "${UPX_URL}" | tar -xvzf -
             install -m 755 upx-${UPX_VERSION}-${OS_ARCH}_linux/upx ~/.local/bin/upx
