--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,7 +184,7 @@ commands:
             UPX_VERSION=$(DO_CURL https://api.github.com/repos/upx/upx/releases/latest | jq -r '.tag_name')
             UPX_URL="https://github.com/upx/upx/releases/download/${UPX_VERSION}/upx-${UPX_VERSION#v}-${OS_ARCH}_linux.tar.xz"
 
-            DO_CURL "${UPX_URL}" | tar -xvzf -
+            DO_CURL "${UPX_URL}" | tar -xvJf -
             install -m 755 upx-${UPX_VERSION}-${OS_ARCH}_linux/upx ~/.local/bin/upx
 
       - run:
@@ -244,6 +244,7 @@ commands:
           paths:
             - /home/circleci/.local/bin/ # upx binary
             - /home/circleci/.cargo/
+            - /home/circleci/project/lambda_sns_to_slack/target/
             - /home/circleci/project/CACHED_VERSIONS.txt
 
 jobs:
